@@ -1,5 +1,5 @@
 -------------------------------------------------------------------------------
-$Id: README.1,v 1.22 1993/06/19 18:50:28 gray Exp $
+$Id: README.1,v 1.23 1993/07/20 05:53:28 gray Exp $
 -------------------------------------------------------------------------------
 
 INSTALLATION:
@@ -34,6 +34,11 @@ This repository has been made available through the generosity of the
 Pittsburgh Supercomputing Center with special help from Doug Balog.
 
 Thanks much to them both.
+
+ANTAIRE REPOSITORY:
+
+In the future (possibly currently depending on the age of this file),
+also try ftp.antaire.com in the /pub/antaire/argv directory.
 
 -------------------------------------------------------------------------------
 
