@@ -1,5 +1,5 @@
 -------------------------------------------------------------------------------
-$Id: README_ftp.1,v 1.2 1993/05/24 17:00:24 gray Exp $
+$Id: README_ftp.1,v 1.3 1993/07/20 05:53:30 gray Exp $
 -------------------------------------------------------------------------------
 
 REPOSITORY:
@@ -12,6 +12,11 @@ This repository has been made available through the generosity of the
 Pittsburgh Supercomputing Center with special help from Doug Balog.
 
 Thanks much to them both.
+
+ANTAIRE REPOSITORY:
+
+In the future (possibly currently depending on the age of this file),
+also try ftp.antaire.com in the /pub/antaire/argv directory.
 
 -------------------------------------------------------------------------------
 
